This commit deserves your attention
- exercise finally done
- updating read me file
- create a general layout to handle the main content inside and reuse it through the app
- footer added
- header separated in another component and add today's date
- pagination finished and working fine
- added some general styles
- a 404 error page added just in case
- to avoid many api request, the list of organizations is called once and saved in local storage, but the single organization page perform an api call on every reload
- this is the final commit and it was uploaded online PLEASE CHECK THE READ ME

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "github-organizations-nearsure",
   "version": "0.1.0",
+  "homepage": "https://portfolio.israelsantiago.com/github-organizations",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
